frontend/test/should_pass/methods_in_node_class.gm
node class N
{
	function ff() : double
	{
		return(3.141592654);
	}
	
	procedure pp() : (double)
	{
		return(3.141592654);
	}
}
