frontend/test/should_fail/computations_no_procmethod_method.gm
using computations_no_procmethod;

node class N
{
	function bar(n:NO) : int
	{
		n.no();
		return(42);
	}
}
